src/styles/components/layout.scss
.layout {
  width: 100%;
  min-height: 100vh;
  display: flex;
  background-image: url('/assets/gradients/gradient-1.jpg');
  background-size: 600px auto;

  @include media(900px, 'max') {
    flex-direction: column;
    padding-top: 66px;
  }

  &--sideNav {
    z-index: 999999;
    position: relative;
  }
  &--content {
    z-index: 50;
    width: 100%;
    height: calc(100vh);
    overflow-x: hidden;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    position: relative;
    @include media(900px, 'max') {
      overflow: hidden;
      height: auto;
    }
  }
}

